--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "CollegeEats",
-    "slug": "CollegeEats",
+    "name": "tracks",
+    "slug": "tracks",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
