Added full keyword search functionality.

--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.5",
+    "@react-native-async-storage/async-storage": "^1.15.14",
     "@react-native-community/masked-view": "^0.1.11",
     "axios": "^0.21.1",
     "expo": "~42.0.1",
+    "expo-cli": "^5.0.3",
     "expo-location": "^12.1.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
