--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-cli": "^5.0.3",
     "expo-location": "^12.1.2",
     "expo-status-bar": "~1.0.4",
+    "geolib": "^3.3.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
@@ -22,6 +23,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-maps": "^0.28.0",
     "react-native-material-dropdown": "^0.11.1",
+    "react-native-open-maps": "^0.4.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
